Update _ui.scss to fix link contrast in dark mode

--- a/_sass/_ui.scss
+++ b/_sass/_ui.scss
@@ -43,9 +43,9 @@
   --c-accent-dark: #f1ab5d;
 
   --c-link: #084769;
-  --c-link-dark: #129fec;
+  --c-link-dark: #7fb6d9;
   --c-link-hover: #032d44;
-  --c-link-hover-dark: #0873ad;
+  --c-link-hover-dark: #9cc9e4;
 
   --c-meta: #999;
 }
